gitignore updated + other changes in prep for db

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Ignore database credentials
+src/main/resources/db.properties
+
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
